# rag_haystack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.qdrant  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.stress.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
experiments/: README.md  _registry.py
experiments/_template/: README.md  pipeline_config.py
experiments/exp_001_smart_document_splitter/: README.md  pipeline_config.py
experiments/exp_001_smart_document_splitter/components/: smart_document_splitter.py
experiments/exp_002_gliner_biomedical_metadata/: README.md  pipeline_config.py
experiments/exp_002_gliner_biomedical_metadata/assets/: biomedical_articles.json
experiments/exp_002_gliner_biomedical_metadata/components/: _gliner_loader.py  gliner_metadata_extractor.py  gliner_query_filter_builder.py
haystack_api/: __about__.py  application.py  config.py  errors.py  prompt_templates.py  schema.py  scrape.py  structlog_config.py  tasks.py  utils.py
haystack_api/controller/: collection.py  document.py  evaluators.py  file_upload.py  health.py  query.py  tasks.py  utils.py  web_scrape.py
haystack_api/pipeline/: component_utils.py
haystack_api/pipeline/custom_components/: __init__.py  conditional_router.py  ollama_generator.py  openai_generator.py  prompt_builder.py  qdrant_retriever.py
haystack_api/pipeline/pipeline_configs/: en_gen_config.py  pipeline_utils.py  test_config.py
scripts/: get_image_tag.sh  haystack-entry.sh  haystack-worker-entry.sh  init-persist.sh  qdrant-entry.sh  requests.sh  stress.py  wait_for_haystack.sh
tests/: test_collection.py  test_collection_endpoints.py  test_component_conditional_router.py  test_component_ollama_generator.py  test_component_openai_generator.py  test_component_prompt_builder.py  test_component_qdrant_retriever.py  test_document.py  test_file_upload.py  test_http_error.py  test_pipeline_utils.py  test_prompt_templates.py  test_query.py  test_tasks_celery.py  test_tasks_controller.py
tests/e2e/: conftest.py  test_e2e.py
tests/samples/faq/: faq_1.json
